engines/ep/src/checkpoint_manager.cc
@@ -666,6 +666,9 @@ CheckpointManager::expelUnreferencedCheckpointItems() {
     // queueLock already released here, O(N) deallocation is lock-free
     const auto queuedItemsMemReleased = extractRes.deleteItems();
 
+    // Test hook that executes before CM::lock is re-acquired
+    expelHook();
+
     {
         // Acquire the queueLock just for the very short time necessary for
         // updating the checkpoint's queued-items mem-usage and removing the
@@ -676,6 +679,14 @@ CheckpointManager::expelUnreferencedCheckpointItems() {
         std::lock_guard<std::mutex> lh(queueLock);
         auto* checkpoint = extractRes.getCheckpoint();
         Expects(checkpoint);
+
+        // Expel always touches the oldest checkpoint in the list.
+        // The checkpoint touched by Expel might not exist anymore if the
+        // VBucket has rolled-back. Just give up in that case.
+        if (checkpoint != checkpointList.begin()->get()) {
+            return {0, 0};
+        }
+
         Expects(extractRes.getExpelCursor().getCheckpoint()->get() ==
                 checkpoint);
         checkpoint->applyQueuedItemsMemUsageDecrement(queuedItemsMemReleased);
